--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Tales A. Mendonça <talesam@gmail.com>
 
-pkgname=pkgbuild-template
-pkgdesc="Package template for Communitybig"
+pkgname=test-pkg
+pkgdesc="Package test for Communitybig"
 # Uncomment and edit the following lines as needed
 #depends=('')
 #makedepends=('')
