Add epoch in PKGBUILD

--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -11,6 +11,7 @@ pkgdesc="Package test for Communitybig"
 #replaces=('')
 pkgver=$(date +%y.%m.%d)
 pkgrel=$(date +%H%M)
+epoch=1
 arch=('any')
 license=('MIT')
 url="https://github.com/big-comm/${pkgname}"
